# CAR-MNAR

./: .gitignore  CITATION.cff  IMPLEMENTATION_GUIDE.md  LICENSE  MANIFEST.md  README.md  REPRODUCIBILITY.md  pyproject.toml  requirements.txt  run_complete_synthetic_experiments.py  run_experiments.py
carmnar/: __init__.py  paths.py
carmnar/algorithms/: adaptive_mnar_calibrator.py  advanced_mnar_mechanisms.py  causal_discovery.py  comprehensive_baselines.py  factorial_experiment_framework.py  general_mnar_optimizer.py  mathematically_specified_mnar.py  mnar_generator.py
carmnar/analysis/: advanced_statistical_analysis.py  statistical_power_analysis.py  uncertainty_quantification.py
carmnar/data_generation/: enhanced_synthetic_dataset_factory.py  heavy_tailed_mnar_generator.py  synthetic_causal_network.py  synthetic_dataset_factory.py
carmnar/evaluation/: advanced_causal_metrics.py  advanced_structural_metrics.py  comprehensive_evaluation_framework.py  cpdag_aware_metrics.py  ground_truth_establishment.py  heavy_tailed_robustness_evaluator.py  metrics.py  negative_controls.py
carmnar/experiments/: advanced_comparative_experiment.py  baseline_comparison_experiment.py  comprehensive_metrics_experiment.py  distributed_experiment_runner.py  heavy_tailed_robustness_experiment.py  (+4 more)
data/: README.md
docs/: REPRODUCIBILITY.md
examples/: quickstart.py
formal_verification/: CIPreservation.lean  README.md  lakefile.toml
scripts/: download_data.py
supplementary/: CAR-MNAR_supplementary.bbl  CAR-MNAR_supplementary.tex  mybibliography.bib
tests/: test_smoke.py
(+9 files in other folders)
