[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "carmnar"
version = "1.0.0"
description = "A unified factorial framework for evaluating causal-discovery robustness under self-masking MNAR data."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Matin Alinejad" },
  { name = "Katerina Hlaváčková-Schindler" },
]
keywords = ["causal discovery", "missing data", "MNAR", "evaluation framework", "CPDAG"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.21",
  "scipy>=1.7",
  "pandas>=1.3",
  "scikit-learn>=1.0",
  "networkx>=2.6",
  "scikit-optimize>=0.9",
  "statsmodels>=0.13",
  "causal-learn>=0.1.3",
  "matplotlib>=3.4",
  "seaborn>=0.11",
  "tqdm>=4.62",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/Matin-Alinejad/CAR-MNAR"
Repository = "https://github.com/Matin-Alinejad/CAR-MNAR"

[tool.setuptools.packages.find]
include = ["carmnar*"]
